CAN-1151: Mediathread accessibility: Ensure active user interface components have sufficient contrast

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -43,6 +43,7 @@ a, a.page-link {
 .btn-outline-primary:focus,
 .btn-outline-primary:active {
     background-color: #0056b3;
+    color: #fff;
 }
 
 .badge-primary,
